--- a/src/components/NavBar/navBar.css
+++ b/src/components/NavBar/navBar.css
@@ -1,5 +1,5 @@
 :root{
-  --blue: #004AAD;
+  --primary-color: #1e1e1e; 
   --darkBlue: #0C356B;
   --bgColor: #F4F4F4;
   --purple: #5B1A8E;
@@ -11,7 +11,7 @@
   --bgFont: 'Pragati Narrow', sans-serif;
  }
 .navbar {
-  background-color: var(--blue);
+  background-color: var(--primary-color);
   border-bottom: 4px solid;
   border-image-slice: 1;
   border-image-source: var(--backgroundColor);
